fix image stretching

--- a/client/web/src/App.css
+++ b/client/web/src/App.css
@@ -87,6 +87,7 @@
 
 .image-preview-individual-div {
   display: flex;
+  align-items: center;
 }
 
 .x-circle {
